drm/msm: Fix bootup splat with separate_gpu_drm modparam (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -403,6 +403,7 @@
 	patches.kernel.org/6.17.3-331-ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-inpu.patch
 	patches.kernel.org/6.17.3-332-ipv6-snmp-do-not-use-SNMP_MIB_SENTINEL-anymore.patch
 	patches.kernel.org/6.17.3-333-ipv6-snmp-do-not-track-per-idev-ICMP6_MIB_RATE.patch
+	patches.kernel.org/6.17.3-334-drm-msm-Fix-bootup-splat-with-separate_gpu_drm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
