--- a/series.conf
+++ b/series.conf
@@ -153,6 +153,7 @@
 	patches.kernel.org/6.17.3-081-leds-leds-lp55xx-Use-correct-address-for-memor.patch
 	patches.kernel.org/6.17.3-082-PCI-MSI-Check-MSI_FLAG_PCI_MSI_MASK_PARENT-in-.patch
 	patches.kernel.org/6.17.3-083-block-use-int-to-store-blk_stack_limits-return.patch
+	patches.kernel.org/6.17.3-084-ARM-dts-stm32-stm32mp151c-plyaqm-Use-correct-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
