--- a/series.conf
+++ b/series.conf
@@ -434,6 +434,7 @@
 	patches.kernel.org/6.17.3-362-ASoC-Intel-hda-sdw-bpt-set-persistent_buffer-f.patch
 	patches.kernel.org/6.17.3-363-srcu-tiny-Remove-preempt_disable-enable-in-src.patch
 	patches.kernel.org/6.17.3-364-drm-amdgpu-Fix-allocating-extra-dwords-for-rin.patch
+	patches.kernel.org/6.17.3-365-f2fs-fix-to-update-map-m_next_extent-correctly.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
