--- a/series.conf
+++ b/series.conf
@@ -426,6 +426,7 @@
 	patches.kernel.org/6.17.3-354-wifi-mt76-fix-potential-memory-leak-in-mt76_wm.patch
 	patches.kernel.org/6.17.3-355-wifi-mt76-mt7996-Use-proper-link_id-in-link_st.patch
 	patches.kernel.org/6.17.3-356-wifi-mt76-mt7996-Check-phy-before-init-msta_li.patch
+	patches.kernel.org/6.17.3-357-wifi-mt76-mt7996-Fix-tx-queues-initialization-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
