blk-mq: split bitmap grow and resize case in blk_mq_update_nr_requests() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -198,6 +198,7 @@
 	patches.kernel.org/6.17.3-126-blk-mq-check-invalid-nr_requests-in-queue_requ.patch
 	patches.kernel.org/6.17.3-127-blk-mq-convert-to-serialize-updating-nr_reques.patch
 	patches.kernel.org/6.17.3-128-blk-mq-cleanup-shared-tags-case-in-blk_mq_upda.patch
+	patches.kernel.org/6.17.3-129-blk-mq-split-bitmap-grow-and-resize-case-in-bl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
