--- a/series.conf
+++ b/series.conf
@@ -564,6 +564,7 @@
 	patches.kernel.org/6.17.3-492-tpm-Disable-TPM2_TCG_HMAC-by-default.patch
 	patches.kernel.org/6.17.3-493-ALSA-hda-hdmi-Add-pin-fix-for-HP-ProDesk-model.patch
 	patches.kernel.org/6.17.3-494-ALSA-hda-realtek-Add-quirk-for-HP-Spectre-14t-.patch
+	patches.kernel.org/6.17.3-495-Squashfs-fix-uninit-value-in-squashfs_get_pare.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
