--- a/series.conf
+++ b/series.conf
@@ -528,6 +528,7 @@
 	patches.kernel.org/6.17.3-456-Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-.patch
 	patches.kernel.org/6.17.3-457-Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_fre.patch
 	patches.kernel.org/6.17.3-458-Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
+	patches.kernel.org/6.17.3-459-Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
