LoongArch: Automatically disable kaslr if boot from kexec_file (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -589,6 +589,7 @@
 	patches.kernel.org/6.17.3-517-tracing-Stop-fortify-string-from-warning-in-tr.patch
 	patches.kernel.org/6.17.3-518-dm-fix-queue-start-stop-imbalance-under-suspen.patch
 	patches.kernel.org/6.17.3-519-dm-fix-NULL-pointer-dereference-in-__dm_suspen.patch
+	patches.kernel.org/6.17.3-520-LoongArch-Automatically-disable-kaslr-if-boot-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
