--- a/series.conf
+++ b/series.conf
@@ -475,6 +475,7 @@
 	patches.kernel.org/6.17.3-403-sparc-fix-accurate-exception-reporting-in-copy.patch
 	patches.kernel.org/6.17.3-404-sparc-fix-accurate-exception-reporting-in-copy.patch
 	patches.kernel.org/6.17.3-405-vfio-pds-replace-bitmap_free-with-vfree.patch
+	patches.kernel.org/6.17.3-406-crypto-comp-Use-same-definition-of-context-all.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
