--- a/series.conf
+++ b/series.conf
@@ -456,6 +456,7 @@
 	patches.kernel.org/6.17.3-384-Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop.patch
 	patches.kernel.org/6.17.3-385-RDMA-core-Resolve-MAC-of-next-hop-device-witho.patch
 	patches.kernel.org/6.17.3-386-IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
+	patches.kernel.org/6.17.3-387-Documentation-trace-historgram-design-Separate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
