--- a/series.conf
+++ b/series.conf
@@ -507,6 +507,7 @@
 	patches.kernel.org/6.17.3-435-ipvs-Defer-ip_vs_ftp-unregister-during-netns-c.patch
 	patches.kernel.org/6.17.3-436-netfilter-nfnetlink-reset-nlh-pointer-during-b.patch
 	patches.kernel.org/6.17.3-437-netfilter-nf_conntrack-do-not-skip-entries-in-.patch
+	patches.kernel.org/6.17.3-438-scsi-ufs-core-Fix-data-race-in-CPU-latency-PM-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
