--- a/series.conf
+++ b/series.conf
@@ -253,6 +253,7 @@
 	patches.kernel.org/6.17.3-181-arm64-dts-apple-t600x-Add-bluetooth-device-nod.patch
 	patches.kernel.org/6.17.3-182-arm64-dts-apple-Add-ethernet0-alias-for-J375-t.patch
 	patches.kernel.org/6.17.3-183-selftests-always-install-UAPI-headers-to-the-c.patch
+	patches.kernel.org/6.17.3-184-smp-Fix-up-and-expand-the-smp_call_function_ma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
