--- a/series.conf
+++ b/series.conf
@@ -601,6 +601,7 @@
 	patches.kernel.org/6.17.3-529-LoongArch-BPF-Remove-duplicated-flags-check.patch
 	patches.kernel.org/6.17.3-530-LoongArch-BPF-Fix-uninitialized-symbol-retval_.patch
 	patches.kernel.org/6.17.3-531-mm-ksm-fix-flag-dropping-behavior-in-ksm_madvi.patch
+	patches.kernel.org/6.17.3-532-ksmbd-Fix-race-condition-in-RPC-handle-list-ac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
