--- a/series.conf
+++ b/series.conf
@@ -520,6 +520,7 @@
 	patches.kernel.org/6.17.3-448-net-enetc-Fix-probing-error-message-typo-for-t.patch
 	patches.kernel.org/6.17.3-449-net-usb-Remove-disruptive-netif_wake_queue-in-.patch
 	patches.kernel.org/6.17.3-450-ptp-Add-a-upper-bound-on-max_vclocks.patch
+	patches.kernel.org/6.17.3-451-vhost-vringh-Fix-copy_to_iter-return-value-che.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
