i3c: fix big-endian FIFO transfers (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -278,6 +278,7 @@
 	patches.kernel.org/6.17.3-206-i2c-designware-Add-disabling-clocks-when-probe.patch
 	patches.kernel.org/6.17.3-207-libbpf-Fix-error-when-st-prefix_ops-and-ops-fr.patch
 	patches.kernel.org/6.17.3-208-bpf-Enforce-expected_attach_type-for-tailcall-.patch
+	patches.kernel.org/6.17.3-209-i3c-fix-big-endian-FIFO-transfers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
