--- a/series.conf
+++ b/series.conf
@@ -608,6 +608,7 @@
 	patches.kernel.org/6.17.3-536-ext4-fix-checks-for-orphan-inodes.patch
 	patches.kernel.org/6.17.3-537-KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if-.patch
 	patches.kernel.org/6.17.3-538-fbdev-simplefb-Fix-use-after-free-in-simplefb_.patch
+	patches.kernel.org/6.17.3-539-mm-hugetlb-avoid-soft-lockup-when-mprotect-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
