ACPI: processor: idle: Fix memory leak when register cpuidle device failed (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -135,6 +135,7 @@
 	patches.kernel.org/6.17.3-063-arm64-dts-imx93-kontron-Fix-USB-port-assignmen.patch
 	patches.kernel.org/6.17.3-064-arm64-dts-imx95-Correct-the-lpuart7-and-lpuart.patch
 	patches.kernel.org/6.17.3-065-bpf-Remove-preempt_disable-in-bpf_try_get_buff.patch
+	patches.kernel.org/6.17.3-066-ACPI-processor-idle-Fix-memory-leak-when-regis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
