--- a/series.conf
+++ b/series.conf
@@ -498,6 +498,7 @@
 	patches.kernel.org/6.17.3-426-coresight-etm4x-Support-atclk.patch
 	patches.kernel.org/6.17.3-427-coresight-Appropriately-disable-programming-cl.patch
 	patches.kernel.org/6.17.3-428-coresight-Appropriately-disable-trace-bus-cloc.patch
+	patches.kernel.org/6.17.3-429-coresight-Avoid-enable-programming-clock-dupli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
