--- a/series.conf
+++ b/series.conf
@@ -328,6 +328,7 @@
 	patches.kernel.org/6.17.3-256-crypto-octeontx2-Call-strscpy-with-correct-siz.patch
 	patches.kernel.org/6.17.3-257-drm-re-allow-no-op-changes-on-non-primary-plan.patch
 	patches.kernel.org/6.17.3-258-media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
+	patches.kernel.org/6.17.3-259-media-staging-ipu7-convert-to-use-pci_alloc_ir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
