--- a/series.conf
+++ b/series.conf
@@ -268,6 +268,7 @@
 	patches.kernel.org/6.17.3-196-tools-nolibc-add-stdbool.h-to-nolibc-includes.patch
 	patches.kernel.org/6.17.3-197-thermal-drivers-qcom-Make-LMH-select-QCOM_SCM.patch
 	patches.kernel.org/6.17.3-198-thermal-drivers-qcom-lmh-Add-missing-IRQ-inclu.patch
+	patches.kernel.org/6.17.3-199-i2c-mediatek-fix-potential-incorrect-use-of-I2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
