pinctrl: check the return value of pinmux_ops::get_function_name() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -623,6 +623,7 @@
 	patches.kernel.org/6.17.3-551-PCI-endpoint-pci-epf-test-Add-NULL-check-for-D.patch
 	patches.kernel.org/6.17.3-552-thunderbolt-Fix-use-after-free-in-tb_dp_dprx_w.patch
 	patches.kernel.org/6.17.3-553-tee-fix-register_shm_helper.patch
+	patches.kernel.org/6.17.3-554-pinctrl-check-the-return-value-of-pinmux_ops-g.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
