--- a/series.conf
+++ b/series.conf
@@ -345,6 +345,7 @@
 	patches.kernel.org/6.17.3-273-cdx-don-t-select-CONFIG_GENERIC_MSI_IRQ.patch
 	patches.kernel.org/6.17.3-274-PCI-ACPI-Fix-pci_acpi_preserve_config-memory-l.patch
 	patches.kernel.org/6.17.3-275-HID-i2c-hid-Fix-test-in-i2c_hid_core_register_.patch
+	patches.kernel.org/6.17.3-276-ALSA-lx_core-use-int-type-to-store-negative-er.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
