--- a/series.conf
+++ b/series.conf
@@ -202,6 +202,7 @@
 	patches.kernel.org/6.17.3-130-blk-mq-sched-add-new-parameter-nr_requests-in-.patch
 	patches.kernel.org/6.17.3-131-blk-mq-fix-potential-deadlock-while-nr_request.patch
 	patches.kernel.org/6.17.3-132-arm64-dts-allwinner-a527-cubie-a5e-Add-etherne.patch
+	patches.kernel.org/6.17.3-133-arm64-dts-allwinner-t527-avaota-a1-Add-etherne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
