misc: fastrpc: Fix fastrpc_map_lookup operation (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -612,6 +612,7 @@
 	patches.kernel.org/6.17.3-540-selftests-mm-skip-soft-dirty-tests-when-CONFIG.patch
 	patches.kernel.org/6.17.3-541-nvdimm-ndtest-Return-ENOMEM-if-devm_kcalloc-fa.patch
 	patches.kernel.org/6.17.3-542-misc-fastrpc-Save-actual-DMA-size-in-fastrpc_m.patch
+	patches.kernel.org/6.17.3-543-misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
