net: nfc: nci: Add parameter validation for packet data (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -576,6 +576,7 @@
 	patches.kernel.org/6.17.3-504-ASoC-SOF-ipc4-pcm-fix-delay-calculation-when-D.patch
 	patches.kernel.org/6.17.3-505-ASoC-SOF-ipc4-pcm-fix-start-offset-calculation.patch
 	patches.kernel.org/6.17.3-506-fs-udf-fix-OOB-read-in-lengthAllocDescs-handli.patch
+	patches.kernel.org/6.17.3-507-net-nfc-nci-Add-parameter-validation-for-packe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
