io_uring/zcrx: fix overshooting recv limit (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -568,6 +568,7 @@
 	patches.kernel.org/6.17.3-496-uio_hv_generic-Let-userspace-take-care-of-inte.patch
 	patches.kernel.org/6.17.3-497-hisi_acc_vfio_pci-Fix-reference-leak-in-hisi_a.patch
 	patches.kernel.org/6.17.3-498-io_uring-waitid-always-prune-wait-queue-entry-.patch
+	patches.kernel.org/6.17.3-499-io_uring-zcrx-fix-overshooting-recv-limit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
