nvme-auth: update bi_directional flag (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -231,6 +231,7 @@
 	patches.kernel.org/6.17.3-159-ACPICA-Apply-ACPI_NONSTRING.patch
 	patches.kernel.org/6.17.3-160-ACPICA-Fix-largest-possible-resource-descripto.patch
 	patches.kernel.org/6.17.3-161-riscv-bpf-Sign-extend-struct-ops-return-values.patch
+	patches.kernel.org/6.17.3-162-nvme-auth-update-bi_directional-flag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
