PCI: tegra194: Fix duplicate PLL disable in pex_ep_event_pex_rst_assert() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -484,6 +484,7 @@
 	patches.kernel.org/6.17.3-412-selftests-mm-fix-va_high_addr_switch.sh-failur.patch
 	patches.kernel.org/6.17.3-413-wifi-rtw89-fix-leak-in-rtw89_core_send_nullfun.patch
 	patches.kernel.org/6.17.3-414-wifi-rtw89-avoid-circular-locking-dependency-i.patch
+	patches.kernel.org/6.17.3-415-PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
