--- a/series.conf
+++ b/series.conf
@@ -495,6 +495,7 @@
 	patches.kernel.org/6.17.3-423-coresight-etm4x-Conditionally-access-register-.patch
 	patches.kernel.org/6.17.3-424-coresight-tmc-Support-atclk.patch
 	patches.kernel.org/6.17.3-425-coresight-catu-Support-atclk.patch
+	patches.kernel.org/6.17.3-426-coresight-etm4x-Support-atclk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
