--- a/series.conf
+++ b/series.conf
@@ -104,6 +104,7 @@
 	patches.kernel.org/6.17.3-032-perf-x86-intel-Use-early_initcall-to-hook-bts_.patch
 	patches.kernel.org/6.17.3-033-perf-x86-intel-Fix-IA32_PMC_x_CFG_B-MSRs-acces.patch
 	patches.kernel.org/6.17.3-034-x86-vdso-Fix-output-operand-size-of-RDPID.patch
+	patches.kernel.org/6.17.3-035-selftests-cgroup-Make-test_pids-backwards-comp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
