--- a/series.conf
+++ b/series.conf
@@ -508,6 +508,7 @@
 	patches.kernel.org/6.17.3-436-netfilter-nfnetlink-reset-nlh-pointer-during-b.patch
 	patches.kernel.org/6.17.3-437-netfilter-nf_conntrack-do-not-skip-entries-in-.patch
 	patches.kernel.org/6.17.3-438-scsi-ufs-core-Fix-data-race-in-CPU-latency-PM-.patch
+	patches.kernel.org/6.17.3-439-scsi-mpt3sas-Fix-crash-in-transport-port-remov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
