irqchip/sg2042-msi: Fix broken affinity setting (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -138,6 +138,7 @@
 	patches.kernel.org/6.17.3-066-ACPI-processor-idle-Fix-memory-leak-when-regis.patch
 	patches.kernel.org/6.17.3-067-genirq-Add-irq_chip_-startup-shutdown-_parent.patch
 	patches.kernel.org/6.17.3-068-PCI-MSI-Add-startup-shutdown-for-per-device-do.patch
+	patches.kernel.org/6.17.3-069-irqchip-sg2042-msi-Fix-broken-affinity-setting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
