--- a/series.conf
+++ b/series.conf
@@ -110,6 +110,7 @@
 	patches.kernel.org/6.17.3-038-cpuset-fix-failure-to-enable-isolated-partitio.patch
 	patches.kernel.org/6.17.3-039-btrfs-return-any-hit-error-from-extent_writepa.patch
 	patches.kernel.org/6.17.3-040-btrfs-fix-symbolic-link-reading-when-bs-ps.patch
+	patches.kernel.org/6.17.3-041-pinctrl-renesas-rzg2l-Fix-invalid-unsigned-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
