fs/ntfs3: reject index allocation if $BITMAP is empty but blocks exist (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10857,6 +10857,7 @@
 	patches.kernel.org/6.12.53-134-ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-inp.patch
 	patches.kernel.org/6.12.53-135-drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.12.53-136-fs-ntfs3-Fix-integer-overflow-in-run_unpack.patch
+	patches.kernel.org/6.12.53-137-fs-ntfs3-reject-index-allocation-if-BITMAP-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
