arm64: dts: imx93-kontron: Fix USB port assignment (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10747,6 +10747,7 @@
 	patches.kernel.org/6.12.53-024-cpufreq-scmi-Account-for-malformed-DT-in-scmi.patch
 	patches.kernel.org/6.12.53-025-firmware-arm_scmi-Mark-VirtIO-ready-before-re.patch
 	patches.kernel.org/6.12.53-026-arm64-dts-imx93-kontron-Fix-GPIO-for-panel-re.patch
+	patches.kernel.org/6.12.53-027-arm64-dts-imx93-kontron-Fix-USB-port-assignme.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
