phy: rockchip: naneng-combphy: Enable U3 OTG port for RK3568 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10813,6 +10813,7 @@
 	patches.kernel.org/6.12.53-090-f2fs-fix-condition-in-__allow_reserved_blocks.patch
 	patches.kernel.org/6.12.53-091-drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.kernel.org/6.12.53-092-media-zoran-Remove-zoran_fh-structure.patch
+	patches.kernel.org/6.12.53-093-phy-rockchip-naneng-combphy-Enable-U3-OTG-por.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
