--- a/series.conf
+++ b/series.conf
@@ -10751,6 +10751,7 @@
 	patches.kernel.org/6.12.53-028-arm64-dts-imx95-Correct-the-lpuart7-and-lpuar.patch
 	patches.kernel.org/6.12.53-029-ACPI-processor-idle-Fix-memory-leak-when-regi.patch
 	patches.kernel.org/6.12.53-030-soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIG.patch
+	patches.kernel.org/6.12.53-031-pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
