--- a/series.conf
+++ b/series.conf
@@ -10884,6 +10884,7 @@
 	patches.kernel.org/6.12.53-161-IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 	patches.kernel.org/6.12.53-162-Documentation-trace-historgram-design-Separat.patch
 	patches.kernel.org/6.12.53-163-wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
+	patches.kernel.org/6.12.53-164-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
