drm/panel: novatek-nt35560: Fix invalid return value (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10808,6 +10808,7 @@
 	patches.kernel.org/6.12.53-085-i2c-designware-Add-disabling-clocks-when-prob.patch
 	patches.kernel.org/6.12.53-086-libbpf-Fix-error-when-st-prefix_ops-and-ops-f.patch
 	patches.kernel.org/6.12.53-087-bpf-Enforce-expected_attach_type-for-tailcall.patch
+	patches.kernel.org/6.12.53-088-drm-panel-novatek-nt35560-Fix-invalid-return-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
