net: nfc: nci: Add parameter validation for packet data (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10951,6 +10951,7 @@
 	patches.kernel.org/6.12.53-228-ASoC-codecs-wcd937x-set-the-comp-soundwire-po.patch
 	patches.kernel.org/6.12.53-229-ASoC-codecs-wcd937x-make-stub-functions-inlin.patch
 	patches.kernel.org/6.12.53-230-fs-udf-fix-OOB-read-in-lengthAllocDescs-handl.patch
+	patches.kernel.org/6.12.53-231-net-nfc-nci-Add-parameter-validation-for-pack.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
