io_uring/waitid: always prune wait queue entry in io_waitid_wait() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10945,6 +10945,7 @@
 	patches.kernel.org/6.12.53-222-tpm-Disable-TPM2_TCG_HMAC-by-default.patch
 	patches.kernel.org/6.12.53-223-Squashfs-fix-uninit-value-in-squashfs_get_par.patch
 	patches.kernel.org/6.12.53-224-uio_hv_generic-Let-userspace-take-care-of-int.patch
+	patches.kernel.org/6.12.53-225-io_uring-waitid-always-prune-wait-queue-entry.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
