idpf: fix Rx descriptor ready check barrier in splitq (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10851,6 +10851,7 @@
 	patches.kernel.org/6.12.53-128-misc-genwqe-Fix-incorrect-cmd-field-being-rep.patch
 	patches.kernel.org/6.12.53-129-pps-fix-warning-in-pps_register_cdev-when-reg.patch
 	patches.kernel.org/6.12.53-130-wifi-iwlwifi-Remove-redundant-header-files.patch
+	patches.kernel.org/6.12.53-131-idpf-fix-Rx-descriptor-ready-check-barrier-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
