--- a/series.conf
+++ b/series.conf
@@ -10724,6 +10724,7 @@
 	patches.kernel.org/6.12.53-001-filelock-add-FL_RECLAIM-to-show_fl_flags-macr.patch
 	patches.kernel.org/6.12.53-002-init-INITRAMFS_PRESERVE_MTIME-should-depend-o.patch
 	patches.kernel.org/6.12.53-003-seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if.patch
+	patches.kernel.org/6.12.53-004-selftests-arm64-Check-fread-return-value-in-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
