PM / devfreq: rockchip-dfi: double count on RK3588 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10772,6 +10772,7 @@
 	patches.kernel.org/6.12.53-049-selftests-vDSO-vdso_test_abi-Correctly-skip-w.patch
 	patches.kernel.org/6.12.53-050-arm64-dts-mediatek-mt8195-Remove-suspend-brea.patch
 	patches.kernel.org/6.12.53-051-nbd-restrict-sockets-to-TCP-and-UDP.patch
+	patches.kernel.org/6.12.53-052-PM-devfreq-rockchip-dfi-double-count-on-RK358.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
