tools/nolibc: make time_t robust if __kernel_old_time_t is missing in host headers (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10796,6 +10796,7 @@
 	patches.kernel.org/6.12.53-073-bpf-Explicitly-check-accesses-to-bpf_sock_add.patch
 	patches.kernel.org/6.12.53-074-bpf-arm64-Call-bpf_jit_binary_pack_finalize-i.patch
 	patches.kernel.org/6.12.53-075-smp-Fix-up-and-expand-the-smp_call_function_m.patch
+	patches.kernel.org/6.12.53-076-tools-nolibc-make-time_t-robust-if-__kernel_o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
