libbpf: Fix reuse of DEVMAP (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10741,6 +10741,7 @@
 	patches.kernel.org/6.12.53-018-regmap-Remove-superfluous-check-for-config-in.patch
 	patches.kernel.org/6.12.53-019-bpf-selftests-Fix-test_tcpnotify_user.patch
 	patches.kernel.org/6.12.53-020-bpf-Remove-migrate_disable-in-kprobe_multi_li.patch
+	patches.kernel.org/6.12.53-021-libbpf-Fix-reuse-of-DEVMAP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
