--- a/series.conf
+++ b/series.conf
@@ -10759,6 +10759,7 @@
 	patches.kernel.org/6.12.53-036-selftests-nolibc-fix-EXPECT_NZ-macro.patch
 	patches.kernel.org/6.12.53-037-leds-leds-lp55xx-Use-correct-address-for-memo.patch
 	patches.kernel.org/6.12.53-038-block-use-int-to-store-blk_stack_limits-retur.patch
+	patches.kernel.org/6.12.53-039-PM-sleep-core-Clear-power.must_resume-in-noir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
