ARM: at91: pm: fix MCKx restore routine (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10753,6 +10753,7 @@
 	patches.kernel.org/6.12.53-030-soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIG.patch
 	patches.kernel.org/6.12.53-031-pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.kernel.org/6.12.53-032-blk-mq-check-kobject-state_in_sysfs-before-de.patch
+	patches.kernel.org/6.12.53-033-ARM-at91-pm-fix-MCKx-restore-routine.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
