mfd: vexpress-sysreg: Check the return value of devm_gpiochip_add_data() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10953,6 +10953,7 @@
 	patches.kernel.org/6.12.53-230-fs-udf-fix-OOB-read-in-lengthAllocDescs-handl.patch
 	patches.kernel.org/6.12.53-231-net-nfc-nci-Add-parameter-validation-for-pack.patch
 	patches.kernel.org/6.12.53-232-mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
+	patches.kernel.org/6.12.53-233-mfd-vexpress-sysreg-Check-the-return-value-of.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
