powerpc/603: Really copy kernel PGD entries into all PGDIRs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10727,6 +10727,7 @@
 	patches.kernel.org/6.12.53-004-selftests-arm64-Check-fread-return-value-in-e.patch
 	patches.kernel.org/6.12.53-005-gfs2-Fix-GLF_INVALIDATE_IN_PROGRESS-flag-clea.patch
 	patches.kernel.org/6.12.53-006-powerpc-8xx-Remove-left-over-instruction-and-.patch
+	patches.kernel.org/6.12.53-007-powerpc-603-Really-copy-kernel-PGD-entries-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
