pwm: tiehrpwm: Make code comment in .free() more useful (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10784,6 +10784,7 @@
 	patches.kernel.org/6.12.53-061-arm64-dts-mediatek-mt8395-kontron-i1200-Fix-M.patch
 	patches.kernel.org/6.12.53-062-arm64-dts-mediatek-mt8516-pumpkin-Fix-machine.patch
 	patches.kernel.org/6.12.53-063-pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-.patch
+	patches.kernel.org/6.12.53-064-pwm-tiehrpwm-Make-code-comment-in-.free-more-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
