--- a/series.conf
+++ b/series.conf
@@ -10768,6 +10768,7 @@
 	patches.kernel.org/6.12.53-045-power-supply-cw2015-Fix-a-alignment-coding-st.patch
 	patches.kernel.org/6.12.53-046-pinctrl-renesas-Use-int-type-to-store-negativ.patch
 	patches.kernel.org/6.12.53-047-null_blk-Fix-the-description-of-the-cache_siz.patch
+	patches.kernel.org/6.12.53-048-selftests-vDSO-Fix-Wunitialized-in-powerpc-VD.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
