--- a/series.conf
+++ b/series.conf
@@ -10821,6 +10821,7 @@
 	patches.kernel.org/6.12.53-098-crypto-keembay-Add-missing-check-after-sg_nen.patch
 	patches.kernel.org/6.12.53-099-hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.kernel.org/6.12.53-100-scsi-pm80xx-Fix-array-index-out-of-of-bounds-.patch
+	patches.kernel.org/6.12.53-101-scsi-myrs-Fix-dma_alloc_coherent-error-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
