sparc: fix accurate exception reporting in copy_{from_to}_user for Niagara (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10890,6 +10890,7 @@
 	patches.kernel.org/6.12.53-167-ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_s.patch
 	patches.kernel.org/6.12.53-168-sparc-fix-accurate-exception-reporting-in-cop.patch
 	patches.kernel.org/6.12.53-169-sparc-fix-accurate-exception-reporting-in-cop.patch
+	patches.kernel.org/6.12.53-170-sparc-fix-accurate-exception-reporting-in-cop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
