--- a/series.conf
+++ b/series.conf
@@ -10818,6 +10818,7 @@
 	patches.kernel.org/6.12.53-095-usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-th.patch
 	patches.kernel.org/6.12.53-096-serial-max310x-Add-error-checking-in-probe.patch
 	patches.kernel.org/6.12.53-097-drm-amd-display-Remove-redundant-semicolons.patch
+	patches.kernel.org/6.12.53-098-crypto-keembay-Add-missing-check-after-sg_nen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
