--- a/series.conf
+++ b/series.conf
@@ -10803,6 +10803,7 @@
 	patches.kernel.org/6.12.53-080-hwmon-mlxreg-fan-Separate-methods-of-fan-sett.patch
 	patches.kernel.org/6.12.53-081-thermal-drivers-qcom-Make-LMH-select-QCOM_SCM.patch
 	patches.kernel.org/6.12.53-082-thermal-drivers-qcom-lmh-Add-missing-IRQ-incl.patch
+	patches.kernel.org/6.12.53-083-i2c-mediatek-fix-potential-incorrect-use-of-I.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
