ARM: dts: ti: omap: omap3-devkit8000-lcd: Fix ti,keep-vref-on property to use correct boolean syntax in DTS (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10762,6 +10762,7 @@
 	patches.kernel.org/6.12.53-039-PM-sleep-core-Clear-power.must_resume-in-noir.patch
 	patches.kernel.org/6.12.53-040-vdso-Add-struct-__kernel_old_timeval-forward-.patch
 	patches.kernel.org/6.12.53-041-ARM-dts-ti-omap-am335x-baltos-Fix-ti-en-ck32k.patch
+	patches.kernel.org/6.12.53-042-ARM-dts-ti-omap-omap3-devkit8000-lcd-Fix-ti-k.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
