arm64: dts: mediatek: mt8186-tentacruel: Fix touchscreen model (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10777,6 +10777,7 @@
 	patches.kernel.org/6.12.53-054-soc-mediatek-mtk-svs-fix-device-leaks-on-mt81.patch
 	patches.kernel.org/6.12.53-055-soc-mediatek-mtk-svs-fix-device-leaks-on-mt81.patch
 	patches.kernel.org/6.12.53-056-cpuidle-qcom-spm-fix-device-and-OF-node-leaks.patch
+	patches.kernel.org/6.12.53-057-arm64-dts-mediatek-mt8186-tentacruel-Fix-touc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
