--- a/series.conf
+++ b/series.conf
@@ -10921,6 +10921,7 @@
 	patches.kernel.org/6.12.53-198-ptp-Add-a-upper-bound-on-max_vclocks.patch
 	patches.kernel.org/6.12.53-199-vhost-vringh-Fix-copy_to_iter-return-value-ch.patch
 	patches.kernel.org/6.12.53-200-Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on.patch
+	patches.kernel.org/6.12.53-201-Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_fr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
