wifi: mt76: fix potential memory leak in mt76_wmac_probe() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10865,6 +10865,7 @@
 	patches.kernel.org/6.12.53-142-watchdog-mpc8xxx_wdt-Reload-the-watchdog-time.patch
 	patches.kernel.org/6.12.53-143-drivers-base-node-handle-error-properly-in-re.patch
 	patches.kernel.org/6.12.53-144-RDMA-cm-Rate-limit-destroy-CM-ID-timeout-erro.patch
+	patches.kernel.org/6.12.53-145-wifi-mt76-fix-potential-memory-leak-in-mt76_w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
