--- a/series.conf
+++ b/series.conf
@@ -10839,6 +10839,7 @@
 	patches.kernel.org/6.12.53-116-drm-amd-pm-Fix-si_upload_smc_data-v3.patch
 	patches.kernel.org/6.12.53-117-drm-amd-pm-Adjust-si_upload_smc_data-register.patch
 	patches.kernel.org/6.12.53-118-drm-amd-pm-Treat-zero-vblank-time-as-too-shor.patch
+	patches.kernel.org/6.12.53-119-drm-amd-pm-Disable-MCLK-switching-with-non-DC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
