--- a/series.conf
+++ b/series.conf
@@ -10738,6 +10738,7 @@
 	patches.kernel.org/6.12.53-015-btrfs-return-any-hit-error-from-extent_writep.patch
 	patches.kernel.org/6.12.53-016-pinctrl-renesas-rzg2l-Fix-invalid-unsigned-re.patch
 	patches.kernel.org/6.12.53-017-arm64-dts-renesas-rzg2lc-smarc-Disable-CAN-FD.patch
+	patches.kernel.org/6.12.53-018-regmap-Remove-superfluous-check-for-config-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
