netfilter: nfnetlink: reset nlh pointer during batch replay (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10909,6 +10909,7 @@
 	patches.kernel.org/6.12.53-186-coresight-Fix-incorrect-handling-for-return-v.patch
 	patches.kernel.org/6.12.53-187-NFSv4.1-fix-backchannel-max_resp_sz-verificat.patch
 	patches.kernel.org/6.12.53-188-ipvs-Defer-ip_vs_ftp-unregister-during-netns-.patch
+	patches.kernel.org/6.12.53-189-netfilter-nfnetlink-reset-nlh-pointer-during-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
