misc: genwqe: Fix incorrect cmd field being reported in error (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10848,6 +10848,7 @@
 	patches.kernel.org/6.12.53-125-usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.12.53-126-usb-gadget-configfs-Correctly-set-use_os_stri.patch
 	patches.kernel.org/6.12.53-127-tty-n_gsm-Don-t-block-input-queue-by-waiting-.patch
+	patches.kernel.org/6.12.53-128-misc-genwqe-Fix-incorrect-cmd-field-being-rep.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
