bpf: Enforce expected_attach_type for tailcall compatibility (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10807,6 +10807,7 @@
 	patches.kernel.org/6.12.53-084-i2c-designware-Fix-clock-issue-when-PM-is-dis.patch
 	patches.kernel.org/6.12.53-085-i2c-designware-Add-disabling-clocks-when-prob.patch
 	patches.kernel.org/6.12.53-086-libbpf-Fix-error-when-st-prefix_ops-and-ops-f.patch
+	patches.kernel.org/6.12.53-087-bpf-Enforce-expected_attach_type-for-tailcall.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
