--- a/series.conf
+++ b/series.conf
@@ -10815,6 +10815,7 @@
 	patches.kernel.org/6.12.53-092-media-zoran-Remove-zoran_fh-structure.patch
 	patches.kernel.org/6.12.53-093-phy-rockchip-naneng-combphy-Enable-U3-OTG-por.patch
 	patches.kernel.org/6.12.53-094-usb-host-max3421-hcd-Fix-error-pointer-derefe.patch
+	patches.kernel.org/6.12.53-095-usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
