--- a/series.conf
+++ b/series.conf
@@ -10911,6 +10911,7 @@
 	patches.kernel.org/6.12.53-188-ipvs-Defer-ip_vs_ftp-unregister-during-netns-.patch
 	patches.kernel.org/6.12.53-189-netfilter-nfnetlink-reset-nlh-pointer-during-.patch
 	patches.kernel.org/6.12.53-190-scsi-mpt3sas-Fix-crash-in-transport-port-remo.patch
+	patches.kernel.org/6.12.53-191-usb-vhci-hcd-Prevent-suspending-virtually-att.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
