--- a/series.conf
+++ b/series.conf
@@ -10761,6 +10761,7 @@
 	patches.kernel.org/6.12.53-038-block-use-int-to-store-blk_stack_limits-retur.patch
 	patches.kernel.org/6.12.53-039-PM-sleep-core-Clear-power.must_resume-in-noir.patch
 	patches.kernel.org/6.12.53-040-vdso-Add-struct-__kernel_old_timeval-forward-.patch
+	patches.kernel.org/6.12.53-041-ARM-dts-ti-omap-am335x-baltos-Fix-ti-en-ck32k.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
