arm64: dts: renesas: rzg2lc-smarc: Disable CAN-FD channel0 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10737,6 +10737,7 @@
 	patches.kernel.org/6.12.53-014-lsm-CONFIG_LSM-can-depend-on-CONFIG_SECURITY.patch
 	patches.kernel.org/6.12.53-015-btrfs-return-any-hit-error-from-extent_writep.patch
 	patches.kernel.org/6.12.53-016-pinctrl-renesas-rzg2l-Fix-invalid-unsigned-re.patch
+	patches.kernel.org/6.12.53-017-arm64-dts-renesas-rzg2lc-smarc-Disable-CAN-FD.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
