arm64: dts: mediatek: mt8516-pumpkin: Fix machine compatible (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10782,6 +10782,7 @@
 	patches.kernel.org/6.12.53-059-mmc-core-Fix-variable-shadowing-in-mmc_route_.patch
 	patches.kernel.org/6.12.53-060-arm64-dts-mediatek-mt6795-xperia-m5-Fix-mmc0-.patch
 	patches.kernel.org/6.12.53-061-arm64-dts-mediatek-mt8395-kontron-i1200-Fix-M.patch
+	patches.kernel.org/6.12.53-062-arm64-dts-mediatek-mt8516-pumpkin-Fix-machine.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
