null_blk: Fix the description of the cache_size module argument (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10767,6 +10767,7 @@
 	patches.kernel.org/6.12.53-044-PM-devfreq-mtk-cci-Fix-potential-error-pointe.patch
 	patches.kernel.org/6.12.53-045-power-supply-cw2015-Fix-a-alignment-coding-st.patch
 	patches.kernel.org/6.12.53-046-pinctrl-renesas-Use-int-type-to-store-negativ.patch
+	patches.kernel.org/6.12.53-047-null_blk-Fix-the-description-of-the-cache_siz.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
