misc: fastrpc: Skip reference for DMA handles (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10968,6 +10968,7 @@
 	patches.kernel.org/6.12.53-245-misc-fastrpc-Save-actual-DMA-size-in-fastrpc_.patch
 	patches.kernel.org/6.12.53-246-misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 	patches.kernel.org/6.12.53-247-misc-fastrpc-fix-possible-map-leak-in-fastrpc.patch
+	patches.kernel.org/6.12.53-248-misc-fastrpc-Skip-reference-for-DMA-handles.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
