ext4: fix checks for orphan inodes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10960,6 +10960,7 @@
 	patches.kernel.org/6.12.53-237-ksmbd-Fix-race-condition-in-RPC-handle-list-a.patch
 	patches.kernel.org/6.12.53-238-ksmbd-fix-error-code-overwriting-in-smb2_get_.patch
 	patches.kernel.org/6.12.53-239-ksmbd-add-max-ip-connections-parameter.patch
+	patches.kernel.org/6.12.53-240-ext4-fix-checks-for-orphan-inodes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
