--- a/series.conf
+++ b/series.conf
@@ -10827,6 +10827,7 @@
 	patches.kernel.org/6.12.53-104-RDMA-mlx5-Better-estimate-max_qp_wr-to-reflec.patch
 	patches.kernel.org/6.12.53-105-RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-.patch
 	patches.kernel.org/6.12.53-106-PCI-ACPI-Fix-pci_acpi_preserve_config-memory-.patch
+	patches.kernel.org/6.12.53-107-ALSA-lx_core-use-int-type-to-store-negative-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
