--- a/series.conf
+++ b/series.conf
@@ -10900,6 +10900,7 @@
 	patches.kernel.org/6.12.53-177-PCI-tegra194-Fix-duplicate-PLL-disable-in-pex.patch
 	patches.kernel.org/6.12.53-178-remoteproc-qcom-q6v5-Avoid-disabling-handover.patch
 	patches.kernel.org/6.12.53-179-dm-vdo-return-error-on-corrupted-metadata-in-.patch
+	patches.kernel.org/6.12.53-180-coresight-etm4x-Conditionally-access-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
