wifi: mac80211: fix Rx packet handling when pubsta information is not available (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10886,6 +10886,7 @@
 	patches.kernel.org/6.12.53-163-wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.kernel.org/6.12.53-164-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
 	patches.kernel.org/6.12.53-165-iommu-vt-d-debugfs-Fix-legacy-mode-page-table.patch
+	patches.kernel.org/6.12.53-166-wifi-mac80211-fix-Rx-packet-handling-when-pub.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
