--- a/series.conf
+++ b/series.conf
@@ -10905,6 +10905,7 @@
 	patches.kernel.org/6.12.53-182-coresight-catu-Support-atclk.patch
 	patches.kernel.org/6.12.53-183-coresight-etm4x-Support-atclk.patch
 	patches.kernel.org/6.12.53-184-coresight-trbe-Return-NULL-pointer-for-alloca.patch
+	patches.kernel.org/6.12.53-185-coresight-tpda-fix-the-logic-to-setup-the-ele.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
