--- a/series.conf
+++ b/series.conf
@@ -10837,6 +10837,7 @@
 	patches.kernel.org/6.12.53-114-drm-amdgpu-Power-up-UVD-3-for-FW-validation-v.patch
 	patches.kernel.org/6.12.53-115-drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 	patches.kernel.org/6.12.53-116-drm-amd-pm-Fix-si_upload_smc_data-v3.patch
+	patches.kernel.org/6.12.53-117-drm-amd-pm-Adjust-si_upload_smc_data-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
