--- a/series.conf
+++ b/series.conf
@@ -10736,6 +10736,7 @@
 	patches.kernel.org/6.12.53-013-x86-vdso-Fix-output-operand-size-of-RDPID.patch
 	patches.kernel.org/6.12.53-014-lsm-CONFIG_LSM-can-depend-on-CONFIG_SECURITY.patch
 	patches.kernel.org/6.12.53-015-btrfs-return-any-hit-error-from-extent_writep.patch
+	patches.kernel.org/6.12.53-016-pinctrl-renesas-rzg2l-Fix-invalid-unsigned-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
