--- a/series.conf
+++ b/series.conf
@@ -10878,6 +10878,7 @@
 	patches.kernel.org/6.12.53-155-scsi-qla2xxx-Fix-incorrect-sign-of-error-code.patch
 	patches.kernel.org/6.12.53-156-scsi-qla2xxx-Fix-incorrect-sign-of-error-code.patch
 	patches.kernel.org/6.12.53-157-HID-hidraw-tighten-ioctl-command-parsing.patch
+	patches.kernel.org/6.12.53-158-f2fs-fix-zero-sized-extent-for-precache-exten.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
