tpm: Disable TPM2_TCG_HMAC by default (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10942,6 +10942,7 @@
 	patches.kernel.org/6.12.53-219-Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon.patch
 	patches.kernel.org/6.12.53-220-vhost-vringh-Modify-the-return-value-check.patch
 	patches.kernel.org/6.12.53-221-bpf-Reject-negative-offsets-for-ALU-ops.patch
+	patches.kernel.org/6.12.53-222-tpm-Disable-TPM2_TCG_HMAC-by-default.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
