PCI: j721e: Fix incorrect error message in probe() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10930,6 +10930,7 @@
 	patches.kernel.org/6.12.53-207-ocfs2-fix-double-free-in-user_cluster_connect.patch
 	patches.kernel.org/6.12.53-208-drivers-base-node-fix-double-free-in-register.patch
 	patches.kernel.org/6.12.53-209-mtd-rawnand-atmel-Fix-error-handling-path-in-.patch
+	patches.kernel.org/6.12.53-210-PCI-j721e-Fix-incorrect-error-message-in-prob.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
