--- a/series.conf
+++ b/series.conf
@@ -10940,6 +10940,7 @@
 	patches.kernel.org/6.12.53-217-net-mlx5-fw-reset-add-reset-timeout-work.patch
 	patches.kernel.org/6.12.53-218-smb-client-fix-crypto-buffers-in-non-linear-m.patch
 	patches.kernel.org/6.12.53-219-Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon.patch
+	patches.kernel.org/6.12.53-220-vhost-vringh-Modify-the-return-value-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
