PM / devfreq: mtk-cci: Fix potential error pointer dereference in probe() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10764,6 +10764,7 @@
 	patches.kernel.org/6.12.53-041-ARM-dts-ti-omap-am335x-baltos-Fix-ti-en-ck32k.patch
 	patches.kernel.org/6.12.53-042-ARM-dts-ti-omap-omap3-devkit8000-lcd-Fix-ti-k.patch
 	patches.kernel.org/6.12.53-043-ARM-dts-omap-am335x-cm-t335-Remove-unused-mca.patch
+	patches.kernel.org/6.12.53-044-PM-devfreq-mtk-cci-Fix-potential-error-pointe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
