bus: fsl-mc: Check return value of platform_get_resource() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10975,6 +10975,7 @@
 	patches.kernel.org/6.12.53-252-remoteproc-pru-Fix-potential-NULL-pointer-der.patch
 	patches.kernel.org/6.12.53-253-tee-fix-register_shm_helper.patch
 	patches.kernel.org/6.12.53-254-pinctrl-check-the-return-value-of-pinmux_ops-.patch
+	patches.kernel.org/6.12.53-255-bus-fsl-mc-Check-return-value-of-platform_get.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
