--- a/series.conf
+++ b/series.conf
@@ -10918,6 +10918,7 @@
 	patches.kernel.org/6.12.53-195-iommu-vt-d-Disallow-dirty-tracking-if-incoher.patch
 	patches.kernel.org/6.12.53-196-RDMA-siw-Always-report-immediate-post-SQ-erro.patch
 	patches.kernel.org/6.12.53-197-net-usb-Remove-disruptive-netif_wake_queue-in.patch
+	patches.kernel.org/6.12.53-198-ptp-Add-a-upper-bound-on-max_vclocks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
