bpf/selftests: Fix test_tcpnotify_user (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10739,6 +10739,7 @@
 	patches.kernel.org/6.12.53-016-pinctrl-renesas-rzg2l-Fix-invalid-unsigned-re.patch
 	patches.kernel.org/6.12.53-017-arm64-dts-renesas-rzg2lc-smarc-Disable-CAN-FD.patch
 	patches.kernel.org/6.12.53-018-regmap-Remove-superfluous-check-for-config-in.patch
+	patches.kernel.org/6.12.53-019-bpf-selftests-Fix-test_tcpnotify_user.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
