--- a/series.conf
+++ b/series.conf
@@ -10910,6 +10910,7 @@
 	patches.kernel.org/6.12.53-187-NFSv4.1-fix-backchannel-max_resp_sz-verificat.patch
 	patches.kernel.org/6.12.53-188-ipvs-Defer-ip_vs_ftp-unregister-during-netns-.patch
 	patches.kernel.org/6.12.53-189-netfilter-nfnetlink-reset-nlh-pointer-during-.patch
+	patches.kernel.org/6.12.53-190-scsi-mpt3sas-Fix-crash-in-transport-port-remo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
