--- a/series.conf
+++ b/series.conf
@@ -10933,6 +10933,7 @@
 	patches.kernel.org/6.12.53-210-PCI-j721e-Fix-incorrect-error-message-in-prob.patch
 	patches.kernel.org/6.12.53-211-idpf-fix-mismatched-free-function-for-dma_all.patch
 	patches.kernel.org/6.12.53-212-nfp-fix-RSS-hash-key-size-when-RSS-is-not-sup.patch
+	patches.kernel.org/6.12.53-213-net-ena-return-0-in-ena_get_rxfh_key_size-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
