--- a/series.conf
+++ b/series.conf
@@ -10913,6 +10913,7 @@
 	patches.kernel.org/6.12.53-190-scsi-mpt3sas-Fix-crash-in-transport-port-remo.patch
 	patches.kernel.org/6.12.53-191-usb-vhci-hcd-Prevent-suspending-virtually-att.patch
 	patches.kernel.org/6.12.53-192-PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR.patch
+	patches.kernel.org/6.12.53-193-PCI-rcar-gen4-Assure-reset-occurs-before-DBI-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
