--- a/series.conf
+++ b/series.conf
@@ -10790,6 +10790,7 @@
 	patches.kernel.org/6.12.53-067-ACPICA-Fix-largest-possible-resource-descript.patch
 	patches.kernel.org/6.12.53-068-riscv-bpf-Sign-extend-struct-ops-return-value.patch
 	patches.kernel.org/6.12.53-069-nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_re.patch
+	patches.kernel.org/6.12.53-070-i3c-master-svc-Use-manual-response-for-IBI-ev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
