once: fix race by moving DO_ONCE to separate section (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10799,6 +10799,7 @@
 	patches.kernel.org/6.12.53-076-tools-nolibc-make-time_t-robust-if-__kernel_o.patch
 	patches.kernel.org/6.12.53-077-spi-fix-return-code-when-spi-device-has-too-m.patch
 	patches.kernel.org/6.12.53-078-bpf-Mark-kfuncs-as-__noclone.patch
+	patches.kernel.org/6.12.53-079-once-fix-race-by-moving-DO_ONCE-to-separate-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
