--- a/series.conf
+++ b/series.conf
@@ -10816,6 +10816,7 @@
 	patches.kernel.org/6.12.53-093-phy-rockchip-naneng-combphy-Enable-U3-OTG-por.patch
 	patches.kernel.org/6.12.53-094-usb-host-max3421-hcd-Fix-error-pointer-derefe.patch
 	patches.kernel.org/6.12.53-095-usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-th.patch
+	patches.kernel.org/6.12.53-096-serial-max310x-Add-error-checking-in-probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
