--- a/series.conf
+++ b/series.conf
@@ -10763,6 +10763,7 @@
 	patches.kernel.org/6.12.53-040-vdso-Add-struct-__kernel_old_timeval-forward-.patch
 	patches.kernel.org/6.12.53-041-ARM-dts-ti-omap-am335x-baltos-Fix-ti-en-ck32k.patch
 	patches.kernel.org/6.12.53-042-ARM-dts-ti-omap-omap3-devkit8000-lcd-Fix-ti-k.patch
+	patches.kernel.org/6.12.53-043-ARM-dts-omap-am335x-cm-t335-Remove-unused-mca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
