--- a/series.conf
+++ b/series.conf
@@ -10792,6 +10792,7 @@
 	patches.kernel.org/6.12.53-069-nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_re.patch
 	patches.kernel.org/6.12.53-070-i3c-master-svc-Use-manual-response-for-IBI-ev.patch
 	patches.kernel.org/6.12.53-071-i3c-master-svc-Recycle-unused-IBI-slot.patch
+	patches.kernel.org/6.12.53-072-selftests-watchdog-skip-ping-loop-if-WDIOF_KE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
