mmc: core: Fix variable shadowing in mmc_route_rpmb_frames() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10779,6 +10779,7 @@
 	patches.kernel.org/6.12.53-056-cpuidle-qcom-spm-fix-device-and-OF-node-leaks.patch
 	patches.kernel.org/6.12.53-057-arm64-dts-mediatek-mt8186-tentacruel-Fix-touc.patch
 	patches.kernel.org/6.12.53-058-arm64-dts-mediatek-mt6331-Fix-pmic-regulators.patch
+	patches.kernel.org/6.12.53-059-mmc-core-Fix-variable-shadowing-in-mmc_route_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
