--- a/series.conf
+++ b/series.conf
@@ -10924,6 +10924,7 @@
 	patches.kernel.org/6.12.53-201-Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_fr.patch
 	patches.kernel.org/6.12.53-202-Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.kernel.org/6.12.53-203-Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
+	patches.kernel.org/6.12.53-204-Bluetooth-hci_sync-Fix-using-random-address-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
