--- a/series.conf
+++ b/series.conf
@@ -10864,6 +10864,7 @@
 	patches.kernel.org/6.12.53-141-ipvs-Use-READ_ONCE-WRITE_ONCE-for-ipvs-enable.patch
 	patches.kernel.org/6.12.53-142-watchdog-mpc8xxx_wdt-Reload-the-watchdog-time.patch
 	patches.kernel.org/6.12.53-143-drivers-base-node-handle-error-properly-in-re.patch
+	patches.kernel.org/6.12.53-144-RDMA-cm-Rate-limit-destroy-CM-ID-timeout-erro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
