--- a/series.conf
+++ b/series.conf
@@ -10760,6 +10760,7 @@
 	patches.kernel.org/6.12.53-037-leds-leds-lp55xx-Use-correct-address-for-memo.patch
 	patches.kernel.org/6.12.53-038-block-use-int-to-store-blk_stack_limits-retur.patch
 	patches.kernel.org/6.12.53-039-PM-sleep-core-Clear-power.must_resume-in-noir.patch
+	patches.kernel.org/6.12.53-040-vdso-Add-struct-__kernel_old_timeval-forward-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
