ACPI: processor: idle: Fix memory leak when register cpuidle device failed (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10749,6 +10749,7 @@
 	patches.kernel.org/6.12.53-026-arm64-dts-imx93-kontron-Fix-GPIO-for-panel-re.patch
 	patches.kernel.org/6.12.53-027-arm64-dts-imx93-kontron-Fix-USB-port-assignme.patch
 	patches.kernel.org/6.12.53-028-arm64-dts-imx95-Correct-the-lpuart7-and-lpuar.patch
+	patches.kernel.org/6.12.53-029-ACPI-processor-idle-Fix-memory-leak-when-regi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
