pinctrl: renesas: Use int type to store negative error codes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10766,6 +10766,7 @@
 	patches.kernel.org/6.12.53-043-ARM-dts-omap-am335x-cm-t335-Remove-unused-mca.patch
 	patches.kernel.org/6.12.53-044-PM-devfreq-mtk-cci-Fix-potential-error-pointe.patch
 	patches.kernel.org/6.12.53-045-power-supply-cw2015-Fix-a-alignment-coding-st.patch
+	patches.kernel.org/6.12.53-046-pinctrl-renesas-Use-int-type-to-store-negativ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
