filelock: add FL_RECLAIM to show_fl_flags() macro (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10721,6 +10721,7 @@
 	patches.kernel.org/6.12.52-034-net-9p-fix-double-req-put-in-p9_fd_cancelled.patch
 	patches.kernel.org/6.12.52-035-KVM-x86-Don-t-re-check-L1-intercepts-when-com.patch
 	patches.kernel.org/6.12.52-036-Linux-6.12.52.patch
+	patches.kernel.org/6.12.53-001-filelock-add-FL_RECLAIM-to-show_fl_flags-macr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
