PCI: tegra194: Fix duplicate PLL disable in pex_ep_event_pex_rst_assert() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10897,6 +10897,7 @@
 	patches.kernel.org/6.12.53-174-crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_d.patch
 	patches.kernel.org/6.12.53-175-RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 	patches.kernel.org/6.12.53-176-wifi-rtw89-avoid-circular-locking-dependency-.patch
+	patches.kernel.org/6.12.53-177-PCI-tegra194-Fix-duplicate-PLL-disable-in-pex.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
