--- a/series.conf
+++ b/series.conf
@@ -10887,6 +10887,7 @@
 	patches.kernel.org/6.12.53-164-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
 	patches.kernel.org/6.12.53-165-iommu-vt-d-debugfs-Fix-legacy-mode-page-table.patch
 	patches.kernel.org/6.12.53-166-wifi-mac80211-fix-Rx-packet-handling-when-pub.patch
+	patches.kernel.org/6.12.53-167-ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
