scsi: qla2xxx: edif: Fix incorrect sign of error code (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10874,6 +10874,7 @@
 	patches.kernel.org/6.12.53-151-f2fs-fix-to-mitigate-overhead-of-f2fs_zero_po.patch
 	patches.kernel.org/6.12.53-152-ALSA-pcm-Disable-bottom-softirqs-as-part-of-s.patch
 	patches.kernel.org/6.12.53-153-ACPI-NFIT-Fix-incorrect-ndr_desc-being-report.patch
+	patches.kernel.org/6.12.53-154-scsi-qla2xxx-edif-Fix-incorrect-sign-of-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
