pinctrl: check the return value of pinmux_ops::get_function_name() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10974,6 +10974,7 @@
 	patches.kernel.org/6.12.53-251-sunrpc-fix-null-pointer-dereference-on-zero-l.patch
 	patches.kernel.org/6.12.53-252-remoteproc-pru-Fix-potential-NULL-pointer-der.patch
 	patches.kernel.org/6.12.53-253-tee-fix-register_shm_helper.patch
+	patches.kernel.org/6.12.53-254-pinctrl-check-the-return-value-of-pinmux_ops-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
