drm/amd/display: Remove redundant semicolons (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10817,6 +10817,7 @@
 	patches.kernel.org/6.12.53-094-usb-host-max3421-hcd-Fix-error-pointer-derefe.patch
 	patches.kernel.org/6.12.53-095-usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-th.patch
 	patches.kernel.org/6.12.53-096-serial-max310x-Add-error-checking-in-probe.patch
+	patches.kernel.org/6.12.53-097-drm-amd-display-Remove-redundant-semicolons.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
