--- a/series.conf
+++ b/series.conf
@@ -10834,6 +10834,7 @@
 	patches.kernel.org/6.12.53-111-crypto-hisilicon-qm-check-whether-the-input-f.patch
 	patches.kernel.org/6.12.53-112-inet-ping-check-sock_net-in-ping_get_port-and.patch
 	patches.kernel.org/6.12.53-113-coresight-Only-register-perf-symlink-for-sink.patch
+	patches.kernel.org/6.12.53-114-drm-amdgpu-Power-up-UVD-3-for-FW-validation-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
