nvmet-fc: move lsop put work to nvmet_fc_ls_req_op (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10789,6 +10789,7 @@
 	patches.kernel.org/6.12.53-066-pwm-tiehrpwm-Fix-corner-case-in-clock-divisor.patch
 	patches.kernel.org/6.12.53-067-ACPICA-Fix-largest-possible-resource-descript.patch
 	patches.kernel.org/6.12.53-068-riscv-bpf-Sign-extend-struct-ops-return-value.patch
+	patches.kernel.org/6.12.53-069-nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
