hwrng: nomadik - add ARM_AMBA dependency (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10819,6 +10819,7 @@
 	patches.kernel.org/6.12.53-096-serial-max310x-Add-error-checking-in-probe.patch
 	patches.kernel.org/6.12.53-097-drm-amd-display-Remove-redundant-semicolons.patch
 	patches.kernel.org/6.12.53-098-crypto-keembay-Add-missing-check-after-sg_nen.patch
+	patches.kernel.org/6.12.53-099-hwrng-nomadik-add-ARM_AMBA-dependency.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
