--- a/series.conf
+++ b/series.conf
@@ -10825,6 +10825,7 @@
 	patches.kernel.org/6.12.53-102-crypto-octeontx2-Call-strscpy-with-correct-si.patch
 	patches.kernel.org/6.12.53-103-media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 	patches.kernel.org/6.12.53-104-RDMA-mlx5-Better-estimate-max_qp_wr-to-reflec.patch
+	patches.kernel.org/6.12.53-105-RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
