--- a/series.conf
+++ b/series.conf
@@ -10740,6 +10740,7 @@
 	patches.kernel.org/6.12.53-017-arm64-dts-renesas-rzg2lc-smarc-Disable-CAN-FD.patch
 	patches.kernel.org/6.12.53-018-regmap-Remove-superfluous-check-for-config-in.patch
 	patches.kernel.org/6.12.53-019-bpf-selftests-Fix-test_tcpnotify_user.patch
+	patches.kernel.org/6.12.53-020-bpf-Remove-migrate_disable-in-kprobe_multi_li.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
