--- a/series.conf
+++ b/series.conf
@@ -10868,6 +10868,7 @@
 	patches.kernel.org/6.12.53-145-wifi-mt76-fix-potential-memory-leak-in-mt76_w.patch
 	patches.kernel.org/6.12.53-146-wifi-mt76-mt7996-Fix-RX-packets-configuration.patch
 	patches.kernel.org/6.12.53-147-wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-.patch
+	patches.kernel.org/6.12.53-148-wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
