--- a/series.conf
+++ b/series.conf
@@ -10958,6 +10958,7 @@
 	patches.kernel.org/6.12.53-235-dm-fix-NULL-pointer-dereference-in-__dm_suspe.patch
 	patches.kernel.org/6.12.53-236-LoongArch-Automatically-disable-kaslr-if-boot.patch
 	patches.kernel.org/6.12.53-237-ksmbd-Fix-race-condition-in-RPC-handle-list-a.patch
+	patches.kernel.org/6.12.53-238-ksmbd-fix-error-code-overwriting-in-smb2_get_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
