--- a/series.conf
+++ b/series.conf
@@ -10852,6 +10852,7 @@
 	patches.kernel.org/6.12.53-129-pps-fix-warning-in-pps_register_cdev-when-reg.patch
 	patches.kernel.org/6.12.53-130-wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.kernel.org/6.12.53-131-idpf-fix-Rx-descriptor-ready-check-barrier-in.patch
+	patches.kernel.org/6.12.53-132-ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
