coresight: trbe: Return NULL pointer for allocation failures (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10904,6 +10904,7 @@
 	patches.kernel.org/6.12.53-181-coresight-tmc-Support-atclk.patch
 	patches.kernel.org/6.12.53-182-coresight-catu-Support-atclk.patch
 	patches.kernel.org/6.12.53-183-coresight-etm4x-Support-atclk.patch
+	patches.kernel.org/6.12.53-184-coresight-trbe-Return-NULL-pointer-for-alloca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
