Revert "net/mlx5e: Update and set Xon/Xoff upon MTU set" (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10939,6 +10939,7 @@
 	patches.kernel.org/6.12.53-216-net-mlx5-pagealloc-Fix-reclaim-race-during-co.patch
 	patches.kernel.org/6.12.53-217-net-mlx5-fw-reset-add-reset-timeout-work.patch
 	patches.kernel.org/6.12.53-218-smb-client-fix-crypto-buffers-in-non-linear-m.patch
+	patches.kernel.org/6.12.53-219-Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
