EDAC/i10nm: Skip DIMM enumeration on a disabled memory controller (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10732,6 +10732,7 @@
 	patches.kernel.org/6.12.53-009-coresight-trbe-Prevent-overflow-in-PERF_IDX2O.patch
 	patches.kernel.org/6.12.53-010-perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
 	patches.kernel.org/6.12.53-011-smb-server-fix-IRD-ORD-negotiation-with-the-c.patch
+	patches.kernel.org/6.12.53-012-EDAC-i10nm-Skip-DIMM-enumeration-on-a-disable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
