IB/sa: Fix sa_local_svc_timeout_ms read race (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10881,6 +10881,7 @@
 	patches.kernel.org/6.12.53-158-f2fs-fix-zero-sized-extent-for-precache-exten.patch
 	patches.kernel.org/6.12.53-159-Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loo.patch
 	patches.kernel.org/6.12.53-160-RDMA-core-Resolve-MAC-of-next-hop-device-with.patch
+	patches.kernel.org/6.12.53-161-IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
