ASoC: Intel: bytcr_rt5651: Fix invalid quirk input mapping (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10854,6 +10854,7 @@
 	patches.kernel.org/6.12.53-131-idpf-fix-Rx-descriptor-ready-check-barrier-in.patch
 	patches.kernel.org/6.12.53-132-ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-in.patch
 	patches.kernel.org/6.12.53-133-ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-inp.patch
+	patches.kernel.org/6.12.53-134-ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-inp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
