Input: uinput - zero-initialize uinput_ff_upload_compat to avoid info leak (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10970,6 +10970,7 @@
 	patches.kernel.org/6.12.53-247-misc-fastrpc-fix-possible-map-leak-in-fastrpc.patch
 	patches.kernel.org/6.12.53-248-misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.kernel.org/6.12.53-249-Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
+	patches.kernel.org/6.12.53-250-Input-uinput-zero-initialize-uinput_ff_upload.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
