--- a/series.conf
+++ b/series.conf
@@ -10965,6 +10965,7 @@
 	patches.kernel.org/6.12.53-242-fbdev-simplefb-Fix-use-after-free-in-simplefb.patch
 	patches.kernel.org/6.12.53-243-mm-hugetlb-avoid-soft-lockup-when-mprotect-to.patch
 	patches.kernel.org/6.12.53-244-nvdimm-ndtest-Return-ENOMEM-if-devm_kcalloc-f.patch
+	patches.kernel.org/6.12.53-245-misc-fastrpc-Save-actual-DMA-size-in-fastrpc_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
