--- a/series.conf
+++ b/series.conf
@@ -10867,6 +10867,7 @@
 	patches.kernel.org/6.12.53-144-RDMA-cm-Rate-limit-destroy-CM-ID-timeout-erro.patch
 	patches.kernel.org/6.12.53-145-wifi-mt76-fix-potential-memory-leak-in-mt76_w.patch
 	patches.kernel.org/6.12.53-146-wifi-mt76-mt7996-Fix-RX-packets-configuration.patch
+	patches.kernel.org/6.12.53-147-wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
