--- a/series.conf
+++ b/series.conf
@@ -10845,6 +10845,7 @@
 	patches.kernel.org/6.12.53-122-PCI-tegra-Fix-devm_kcalloc-argument-order-for.patch
 	patches.kernel.org/6.12.53-123-tcp-fix-__tcp_close-to-only-send-RST-when-req.patch
 	patches.kernel.org/6.12.53-124-drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-.patch
+	patches.kernel.org/6.12.53-125-usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
